--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <header><title>PricePoint Developer Bootstrap</title></header>
 <body>
-python $(wget https://api.github.com/repos/Price-Point/DeveloperBootstrap/contents/bootstrap.py --header 'Accept: application/vnd.github.v3.raw')
-
+wget -qO- https://api.github.com/repos/Price-Point/DevelopmentBoostrap/contents/bootstrap.py --header 'Accept: application/vnd.github.v3.raw' | python - 
 </body>
 </html>
