hopefully the last fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Install guest extensions as described <a href="https://www.techrepublic.com/arti
 Run the following in a terminal window and follow the remaining prompts
 </p>
 <p><code>
-wget -qO - https://api.github.com/repos/Price-Point/development-bootstrap/contents/bootstrap.sh --header 'Accept: application/vnd.github.v3.raw' | bash 
+wget -qO bootstrap.sh https://api.github.com/repos/Price-Point/development-bootstrap/contents/bootstrap.sh --header 'Accept: application/vnd.github.v3.raw' && bash bootstrap.sh && rm bootstrap.sh
 </code>
 </p>
 </body>
