Slight tweak to Guest Additions instructions

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Download latest stable version of <a href="https://lubuntu.me/downloads/" _blank
 <ol>
     <li>Start up your VM. In the menu bar select Devices > Insert Guest Additions CD Image</li>
     <li>In a terminal, run: <br><code>sudo apt-get install -y dkms build-essential linux-headers-generic linux-headers-$(uname -r)</code></li>
-    <li>Navigate to the CD directory in your terminal. You can use the GUI file browser to help you find it</li>
+    <li>Navigate to the CD directory in your terminal. It should be /media/{username}/VBox_GAs_X.X.XX</li>
     <li>Change to root user with: <br><code>sudo su</code></li>
     <li>Install Guest Additions with the command: <br><code>./VBoxLinuxAdditions.run</code></li>
 </ol>
