--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Download latest stable version of <a href="https://lubuntu.me/downloads/" _blank
     <li>Navigate to the CD directory in your terminal. It should be /media/{username}/VBox_GAs_X.X.XX</li>
     <li>Change to root user with: <br><code>sudo su</code></li>
     <li>Install Guest Additions with the command: <br><code>./VBoxLinuxAdditions.run</code></li>
+    <li>Restart VM</code></li>
 </ol>
 
 <h4>
