--- a/index.html
+++ b/index.html
@@ -42,5 +42,11 @@ Run the following in a terminal window and follow the remaining prompts
 wget -qO bootstrap.sh https://api.github.com/repos/Price-Point/development-bootstrap/contents/bootstrap.sh --header 'Accept: application/vnd.github.v3.raw' && bash bootstrap.sh && rm bootstrap.sh
 </code>
 </p>
+
+<h4>Further setup</h4>
+<ol>
+    <li>Follow instructions <a href="https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent?platform=linux"
+        >here</a> for setting up GitHub SSH Keys</li>
+</ol>
 </body>
 </html>
